# DiplomaProject

./: .gitignore  README.md
ForProgrammer/: CMakeLists.txt
ForProgrammer/include/: Hypercube.h
ForProgrammer/src/: Hypercube.cpp  main.cpp
